finish personnel site

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,12 +8,15 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>As a web developer, I have extensive work experiences on front-end development.
-                    Such as html/bootstrap theme, hugo, jekyll static site, React front-end developemnt.</p>
+                <div class="col-lg-8 col-lg-offset-4">
+                    <p><strong>Front-end Developer && Ethereum Developer </strong></p>
                 </div>
-                <div class="col-lg-4">
-                    <p>As a blockchain developer, I have experiences on Ethereum. Such as erc20 token, dapp, solidity. </p>
+                <div class="col-lg-8 col-lg-offset-4">
+                    <p><strong>Skills</strong></p>
+                    <p>- html/css/bootstrap</p>
+                    <p>- wordpress/theme/plugin </p>
+                    <p>- Jekyll/hugo static website generation</p>
+                    <p>- React/Redux front-end development</p>
                 </div>
             </div>
         </div>
