--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,24 +1,24 @@
  <!-- jQuery Version 1.11.0 -->
-    <script src="{{ "/js/jquery-1.11.0.js" }}"></script>
+    <script src="{{ "{{site.url}}js/jquery-1.11.0.js" | absolute_url}}"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="{{ "/js/bootstrap.min.js" }}"></script>
+    <script src="{{ "{{site.url}}js/bootstrap.min.js" | absolute_url}}"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="{{ "/js/jquery.easing.min.js" }}"></script>
-    <script src="{{ "/js/classie.js" }}"></script>
-    <script src="{{ "/js/cbpAnimatedHeader.js" }}"></script>
+    <script src="{{ "{{site.url}}js/jquery.easing.min.js" | absolute_url}}"></script>
+    <script src="{{ "{{site.url}}js/classie.js" | absolute_url}}"></script>
+    <script src="{{ "{{site.url}}js/cbpAnimatedHeader.js" | absolute_url}}"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="{{ "/js/jqBootstrapValidation.js" }}"></script>
+    <script src="{{ "{{site.url}}js/jqBootstrapValidation.js" | absolute_url}}"></script>
     {% if site.contact == "static" %}
-    <script src="{{ "/js/contact_me_static.js" }}"></script>
+    <script src="{{ "{{site.url}}js/contact_me_static.js" | absolute_url}}"></script>
     {% else %}
-     <script src="{{ "/js/contact_me.js" }}"></script>
+     <script src="{{ "{{site.url}}js/contact_me.js" | absolute_url}}"></script>
     {% endif %}
 
     <!-- Custom Theme JavaScript -->
-    <script src="{{ "/js/freelancer.js" }}"></script>
+    <script src="{{ "{{site.url}}js/freelancer.js" | absolute_url}}"></script>
 
     {% if site.contact == "disqus" %}
     <!-- Disqus Stuff -->
