--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,10 +13,13 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-4">
                     <p><strong>Skills</strong></p>
-                    <p>- html/css/bootstrap</p>
-                    <p>- wordpress/theme/plugin </p>
                     <p>- Jekyll/hugo static website generation</p>
                     <p>- React/Redux front-end development</p>
+                    <p>- Ethereum Smart Contract/Dapp, ICO WebSite</p>
+                    <p>- html/css/bootstrap</p>
+                    <p>- wordpress/theme/plugin </p>
+                    <p>- AWS Lambda, EC2, S3, RDS</p>
+                    <p>- Git, Bitbucket</p>
                 </div>
             </div>
         </div>
