--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,25 +1,43 @@
  <!-- About Section -->
-    <section class="success" id="about">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-light">
+                    <h2>About My Sklls</h2>
+                    <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-4">
-                    <p><strong>Front-end Developer && Ethereum Developer </strong></p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-4">
-                    <p><strong>Skills</strong></p>
-                    <p>- Jekyll/hugo static website generation</p>
-                    <p>- React/Redux front-end development</p>
-                    <p>- Ethereum Smart Contract/Dapp, ICO WebSite</p>
-                    <p>- html/css/bootstrap</p>
-                    <p>- wordpress/theme/plugin </p>
-                    <p>- AWS Lambda, EC2, S3, RDS</p>
-                    <p>- Git, Bitbucket</p>
+                <div class="col-lg-8 col-lg-offset-3">
+                    <p><h4>Front-end development</h4></p>
+                    <p>
+                        - React.js, Redux-Saga, Redux-thunk, React-Apollo, React-Native<br>
+                        - Anuglar6<br>
+                        - HTML/CSS, SCSS<br>
+                        - Bootstrap, Material-UI, Bulma(scss)
+                    </p>
+
+                    <p><h4>CMS, MVP framework</h4></p>
+                    <p> - Static site generator: Gatsby/Jekyll/Hugo<br>
+                        - WordPress, Shopify (theme, plugin customization)<br>
+                        - Laravel, Zend, Codeigniter framework</p>
+
+                    <p><h4>Program Language</h4></p>
+                    <p>- PHP, Javascript, Node.js, Ruby</p>
+                    <p><h4>API, API Security</h4></p>
+                    <p>- REST API, GraphQL<br>
+                        - OAuth, JWT</p>
+
+                    <p><h4>Product version & deploy management</h4></p>
+                    <p>- Git, Bitbucket for product version<br>
+                        - Forestry.io for static site content management<br>
+                        - Fetlify, Travis ci, Zeit.co for auto build & deploy<br>
+                        - AWS EC2, S3, RDS for cloud hosting </p>
+
+                    <p><h4>Blockchain </h4></p>
+                    <p> - Ethereum, Stellar<br>
+                        - Smart Contact, Dapp, ICO website</p>
+                    
                 </div>
             </div>
         </div>
