update portfolio list

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,8 +12,9 @@
                     <p><h4>Front-end development</h4></p>
                     <p>
                         - React.js, Redux-Saga, Redux-thunk, React-Apollo, React-Native<br>
-                        - Anuglar6<br>
-                        - HTML/CSS, SCSS<br>
+                        - Anuglar.js (angular6)<br>
+                        - Vue.js, Vuetify<br>
+                        - HTML/CSS, SCSS, Javascript, Jquery<br>
                         - Bootstrap, Material-UI, Bulma(scss)
                     </p>
 
@@ -22,8 +23,9 @@
                         - WordPress, Shopify (theme, plugin customization)<br>
                         - Laravel, Zend, Codeigniter framework</p>
 
-                    <p><h4>Program Language</h4></p>
-                    <p>- PHP, Javascript, Node.js, Ruby</p>
+                    <p><h4>Backend Development</h4></p>
+                    <p>- PHP, Node.js, Ruby</p>
+
                     <p><h4>API, API Security</h4></p>
                     <p>- REST API, GraphQL<br>
                         - OAuth, JWT</p>
@@ -31,12 +33,13 @@
                     <p><h4>Product version & deploy management</h4></p>
                     <p>- Git, Bitbucket for product version<br>
                         - Forestry.io for static site content management<br>
-                        - Fetlify, Travis ci, Zeit.co for auto build & deploy<br>
+                        - Netlify, Travis ci, Zeit.co for auto build & deploy<br>
                         - AWS EC2, S3, RDS for cloud hosting </p>
 
                     <p><h4>Blockchain </h4></p>
-                    <p> - Ethereum, Stellar<br>
-                        - Smart Contact, Dapp, ICO website</p>
+                    <p> - Ethereum 1.0, 2.0<br>
+                        - Smart Contact, Dapp, ICO website<br>
+                        - web3.js</p>
                     
                 </div>
             </div>
