--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,8 +12,8 @@
                     <p><h4>Front-end development</h4></p>
                     <p>
                         - React.js, Redux-Saga, Redux-thunk, React-Apollo, React-Native<br>
+                        - Vue.js, Nuxt, Vuetify<br>
                         - Anuglar.js (angular6)<br>
-                        - Vue.js, Vuetify<br>
                         - HTML/CSS, SCSS, Javascript, Jquery<br>
                         - Bootstrap, Material-UI, Bulma(scss)
                     </p>
